--- a/CHANGELOG
+++ b/CHANGELOG
@@ -507,3 +507,6 @@
 
 0.18.4 2020-04-22
     * Update to support-bundle schema 0.29.0
+
+0.18.5 2020-05-05
+    * Added ports[].public_port_initial property for specifying a port range when cluster_instance_count > 1
