--- a/CHANGELOG
+++ b/CHANGELOG
@@ -510,3 +510,6 @@
 
 0.18.5 2020-05-05
     * Added ports[].public_port_initial property for specifying a port range when cluster_instance_count > 1
+
+0.18.6 2020-05-06
+    * No longer require replicated_api_version minimum for ports[].public_port and ports[].public_port_initial
