--- a/CHANGELOG
+++ b/CHANGELOG
@@ -513,3 +513,7 @@
 
 0.18.6 2020-05-06
     * No longer require replicated_api_version minimum for ports[].public_port and ports[].public_port_initial
+
+0.18.7 2020-09-10
+    * Added `container.disable_publish_all_ports` a boolean or string
+    * Added `container.oom_kill_disable` a boolean or string
