--- a/CHANGELOG
+++ b/CHANGELOG
@@ -527,3 +527,7 @@
 
 0.18.9 2021-05-18
     * Added `component.log_config` and `container.log_config`
+
+0.19.0 2022-06-03
+    * Upgraded Node 8 to 17, TypeScript 2 to 4.
+    * Upgraded dependencies to resolve known CVEs.
