--- a/CHANGELOG
+++ b/CHANGELOG
@@ -534,3 +534,7 @@
 
 0.19.1 2022-06-06
     * Upgraded junit-report-builder to 3.0.0.
+
+0.19.2 2023-03-13
+    * Added `container.user` a string
+    * Added `container.readonly_rootfs` a boolean or string
